[gd_scene load_steps=12 format=2]

[ext_resource path="res://Deep-Night/Enemy1.tres" type="Texture" id=1]
[ext_resource path="res://EnemyPatrol.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Untitled.png" type="Texture" id=3]

[sub_resource type="Animation" id=9]
resource_name = "WalkLeft"
length = 0.257
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=10]
resource_name = "WalkRight"
length = 0.257
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 3.25, 0.25 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 4, 4 )

[sub_resource type="VisualShaderNodeColorConstant" id=13]
constant = Color( 1, 0, 0, 1 )

[sub_resource type="VisualShader" id=14]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Color:2
	vec3 n_out2p0 = vec3(1.000000, 0.000000, 0.000000);
	float n_out2p1 = 1.000000;

// Output:0
	ALBEDO = n_out2p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 0, 75 )
nodes/fragment/2/node = SubResource( 13 )
nodes/fragment/2/position = Vector2( 93, 164 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 49.18
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 357, 264 )
scale = Vector2( 2, 2 )
script = ExtResource( 2 )
amount = 40
speed = 800.0

[node name="Enemy1" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
vframes = 2
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy1"]
anims/WalkLeft = SubResource( 9 )
anims/WalkRight = SubResource( 10 )

[node name="Area2D" type="Area2D" parent="Enemy1"]

[node name="KissCollision" type="CollisionShape2D" parent="Enemy1/Area2D"]
position = Vector2( 0.25, -4.25 )
shape = SubResource( 11 )
one_way_collision = true
one_way_collision_margin = 0.7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 12 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 15 )
emitting = false
amount = 50
lifetime = 0.23
one_shot = true
speed_scale = 1.18
explosiveness = 0.37
randomness = 0.3
process_material = SubResource( 16 )
texture = ExtResource( 3 )

[connection signal="area_entered" from="Enemy1/Area2D" to="." method="_on_Area2D_area_entered"]
